--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-client/src/apiKeys.tsx,
-client/node_modules
+client/build
 client/src/apiKeys.tsx
+client/node_modules
+server/node_modules
+wetlandsVSWorkspace.code-workspace
