--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.1.1",
     "@capacitor/haptics": "1.0.2",
@@ -64,8 +65,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@capacitor/cli": "3.1.1",
-    "@types/leaflet": "^1.7.4"
+    "@capacitor/cli": "3.1.1"
   },
   "description": "Humedales"
 }
