--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ client/src/apiKeys.tsx
 client/node_modules
 server/node_modules
 wetlandsVSWorkspace.code-workspace
+server/cert.pem
+server/key.pem
