--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.21.1",
     "bingmaps": "^2.0.3",
+    "exceljs": "^4.3.0",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-bingmaps": "^3.6.1",
